fix some small errors